--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f0f8ff;
+}
+
 main {
-  font-family: 'Consolas', monospace;
+  width: fit-content;
+  height: fit-content;
+  font-family: "Consolas", monospace;
   display: flex;
   flex-direction: column;
-} 
+  align-items: center;
+  margin: 0 auto;
+}
 
 .pokedex {
   display: flex;
@@ -13,26 +23,29 @@ main {
 
 .pokemon-card {
   border: 4px solid #ffd700;
-  border-radius: 8px; 
+  border-radius: 8px;
   text-align: center;
-  padding: 15px; 
+  padding: 15px;
+  margin: 10px 0;
   background-color: #c6e79d;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-  transition: transform 0.2s ease-in-out; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
 
   &:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   }
 }
 
 .detail {
+  width: 100%;
   border: 4px solid #ffd700;
-  border-radius: 8px; 
+  border-radius: 8px;
   text-align: center;
-  padding: 15px; 
+  padding: 15px;
   background-color: #ecf4e0;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 10px 0;
   img {
     width: 80%;
     height: auto;
